; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_addrconf.c_inet6_if_nlmsg_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv6/extr_addrconf.c_inet6_if_nlmsg_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IFNAMSIZ = common dso_local global i32 0, align 4
@MAX_ADDR_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @inet6_if_nlmsg_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @inet6_if_nlmsg_size() #0 {
  %1 = call i64 @NLMSG_ALIGN(i32 4)
  %2 = load i32, i32* @IFNAMSIZ, align 4
  %3 = call i64 @nla_total_size(i32 %2)
  %4 = add i64 %1, %3
  %5 = load i32, i32* @MAX_ADDR_LEN, align 4
  %6 = call i64 @nla_total_size(i32 %5)
  %7 = add i64 %4, %6
  %8 = call i64 @nla_total_size(i32 4)
  %9 = add i64 %7, %8
  %10 = call i64 @nla_total_size(i32 4)
  %11 = add i64 %9, %10
  %12 = call i32 (...) @inet6_ifla6_size()
  %13 = call i64 @nla_total_size(i32 %12)
  %14 = add i64 %11, %13
  ret i64 %14
}

declare dso_local i64 @NLMSG_ALIGN(i32) #1

declare dso_local i64 @nla_total_size(i32) #1

declare dso_local i32 @inet6_ifla6_size(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
